--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/fevicon.png" rel="icon">
   <link href="assets/img/apple-touch.png" rel="apple-touch">
 
   <!-- Google Fonts -->
