--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 10 Sep 2005</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> akshatprofile.github.io </li>
+                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> akshat3410.github.io/akshatprofile.github.io </li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 9405142229</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Jabalpur </li>
               </ul>
@@ -130,7 +130,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="icofont-document-folder"></i>
-            <span data-toggle="counter-up">61</span>
+            <span data-toggle="counter-up">62</span>
             <p>Projects</p>
           </div>
         </div>
@@ -452,9 +452,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p> H.No.-150, Sathiya Kuawan, 
-              Near Malkham Durga Mandir,
-              Hanuman Tal Ward, Jabalpur Madaya Pradesh</p>
+            <p>You can ask me on Call</p>
           </div>
         </div>
 
