--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="social-links">
         <a href="https://twitter.com/home" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://www.facebook.com/" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="https://www.instagram.com/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.instagram.com/akshat9630/" class="instagram"><i class="icofont-instagram"></i></a>
         <a href="https://www.linkedin.com/in/akshat-soni-889a75212/" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
       <nav class="nav-menu d-none d-lg-block">
