--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="social-links">
               <a href="" class="twitter"><i class="icofont-twitter"></i></a>
               <a href="https://www.github.com/akshat3410" class="github"><i class="fab fa-github"></i></i></a>
-              <a href="https://www.instagram.com/" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="https://www.instagram.com/akshat9630/" class="instagram"><i class="icofont-instagram"></i></a>
               <a href="https://www.linkedin.com/in/akshat-soni-889a75212/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
           </div>
